<resources>
    <string name="app_id">884959081895567</string>
    <string name="app_name">HabitTracker</string>

    <!-- login -->
    <string name="username">Tên đăng nhập</string>
    <string name="phone">Số Điện Thoại</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="password_conf">Nhập lại mật khẩu</string>
    <string name="login">Đăng Nhập</string>
    <string name="register">Đăng Ký</string>
    <string name="register_account">Tôi chưa có tài khoản? Đăng ký</string>
    <string name="or_with">bằng</string>

    <!-- register -->
    <string name="remind_login">Tôi đã có tài khoản? Đăng nhập</string>

</resources>
