<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingStart="40dp"
    android:paddingEnd="110dp"
    android:background="@drawable/bg_main"
    tools:context=".LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4" />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/app_logo" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:layout_weight="0.35"
        android:background="@drawable/bg_input"
        android:gravity="center"
        android:hint="@string/username"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:layout_weight="0.35"
        android:background="@drawable/bg_input"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_blue"
        android:textColor="#fffd"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <View
            android:layout_marginRight="10dp"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:background="#333" />

        <TextView
            android:text="@string/or_with"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginLeft="10dp"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:background="#333" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_fb_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:background="@drawable/bg_facebook" />

        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:background="@drawable/bg_google" />
    </LinearLayout>

    <TextView
        android:id="@+id/link_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="#606060"
        android:text="@string/register_account"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />
</LinearLayout>