<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingStart="55dp"
    android:paddingEnd="55dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_input"
        android:gravity="center"
        android:hint="@string/username"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_input"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:focusableInTouchMode="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_input"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_conf_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_input"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:hint="@string/password_conf"
        android:focusableInTouchMode="true"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_blue"
        android:layout_marginTop="20dp"
        android:textColor="#fffd"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <View
            android:layout_marginRight="10dp"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:background="#333" />

        <TextView
            android:text="or with"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginLeft="10dp"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:background="#333" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:background="@drawable/bg_facebook" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:background="@drawable/bg_google" />
    </LinearLayout>

    <TextView
        android:id="@+id/link_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp"
        android:text="@string/lb_remind_login"/>

</LinearLayout>